--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,10 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-./config.yml
-
 .vscode
 
 # Go workspace file
 go.work
 go.work.sum
 symbols.txt
+config.yml
